# slurp_sway

./: LICENSE  README.md  pyproject.toml
slurp_sway/: __init__.py  box.py  cli.py  slurp_wrapper.py  sway_tree.py
