[build-system]
requires            = ["setuptools>=61.0"]
build-backend       = "setuptools.build_meta"

[project]
name                = "slurp_sway"
dynamic             = ["readme", "version", "dependencies"]
authors             = [{ name = "Ferdinand Bachmann", email = "ferdinand.bachmann@yrlf.at" }]
description         = "slurp for sway"
requires-python     = ">=3.5"
classifiers         = [
    "Programming Language :: Python :: 3",
]

[project.scripts]
"slurp-sway" = "slurp_sway.cli:main"

[project.urls]
"Homepage"          = "https://github.com/Ferdi265/slurp_sway"
"Bug Tracker"       = "https://github.com/Ferdi265/slurp_sway/issues"

[tool.setuptools.dynamic]
version             = { attr = "slurp_sway.__version__" }
readme              = { file = ["README.md"], content-type = "text/markdown" }
dependencies        = { file = ["requirements.txt"] }
